# kaggle-project

./: .gitignore  .pre-commit-config.yaml  pyproject.toml  requirements.txt
fashion-product-images-dataset/data/: README.md
