[tool.poetry]
name = "kaggle-project"
version = "0.1.0"
description = ""
authors = ["Minsuk Choi <mschoi523@gmail.com>"]
readme = "README.md"
packages = [{include = "kaggle_project"}]

[tool.poetry.dependencies]
python = "^3.9"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
